--- a/assets/minecraft/lang/ls_wbr.json
+++ b/assets/minecraft/lang/ls_wbr.json
@@ -1926,7 +1926,7 @@
   "item.minecraft.netherite_pickaxe": "Netherite Pickaxe",
   "item.minecraft.netherite_hoe": "Netherite Hoe",
   "item.minecraft.netherite_shovel": "Netherite Shovel",
-  "item.minecraft.netherite_sword": "Netherite Sword",
+  "item.minecraft.netherite_sword": "Jacobs Zahnstocher",
   "item.minecraft.warped_fungus_on_a_stick": "Warped Fungus on a Stick",
   "container.inventory": "Inventory",
   "container.hopper": "Item Hopper",
