--- a/assets/minecraft/lang/ls_wbr.json
+++ b/assets/minecraft/lang/ls_wbr.json
@@ -22,7 +22,7 @@
   "gui.cancel": "Halt Stop",
   "gui.back": "Weg hier",
   "gui.toTitle": "Weg hier",
-  "gui.toMenu": "Back to Server List",
+  "gui.toMenu": "Halt Stop",
   "gui.up": "Nach oben nun mach schon",
   "gui.down": "Ab nach Unten",
   "gui.yes": "Goldrichtig",
@@ -41,7 +41,7 @@
   "gui.socialInteractions.title": "Assoziale Scheiße",
   "gui.socialInteractions.tab_all": "All",
   "gui.socialInteractions.tab_hidden": "Hidden",
-  "gui.socialInteractions.tab_blocked": "geimene Menschen",
+  "gui.socialInteractions.tab_blocked": "geimeine Menschen",
   "gui.socialInteractions.blocking_hint": "Mit Bill Gates Account verwalten",
   "gui.socialInteractions.status_hidden": "Hidden",
   "gui.socialInteractions.status_blocked": "Blocked",
@@ -584,8 +584,8 @@
   "options.accessibility.link": "Accessibility Guide",
   "options.key.toggle": "Toggle",
   "options.key.hold": "Hold",
-  "options.skinCustomisation": "Sking Customization",
-  "options.skinCustomisation.title": "Skin Customization",
+  "options.skinCustomisation": "Umkleide",
+  "options.skinCustomisation.title": "Umkleide",
   "options.modelPart.cape": "Cape",
   "options.modelPart.hat": "Hat",
   "options.modelPart.jacket": "Jacket",
@@ -1564,7 +1564,7 @@
   "item.minecraft.wooden_shovel": "Wooden Shovel",
   "item.minecraft.wooden_pickaxe": "Wooden Pickaxe",
   "item.minecraft.wooden_axe": "Wooden Axe",
-  "item.minecraft.stone_sword": "Stone Sword",
+  "item.minecraft.stone_sword": "Webriger Piekser",
   "item.minecraft.stone_shovel": "Stone Shovel",
   "item.minecraft.stone_pickaxe": "Stone Pickaxe",
   "item.minecraft.stone_axe": "Stone Axe",
