--- a/assets/minecraft/lang/ls_wbr.json
+++ b/assets/minecraft/lang/ls_wbr.json
@@ -22,7 +22,7 @@
   "gui.cancel": "Halt Stop",
   "gui.back": "Weg hier",
   "gui.toTitle": "Weg hier",
-  "gui.toMenu": "Halt Stop",
+  "gui.toMenu": "Back to Server List",
   "gui.up": "Nach oben nun mach schon",
   "gui.down": "Ab nach Unten",
   "gui.yes": "Goldrichtig",
@@ -41,7 +41,7 @@
   "gui.socialInteractions.title": "Assoziale Scheiße",
   "gui.socialInteractions.tab_all": "All",
   "gui.socialInteractions.tab_hidden": "Hidden",
-  "gui.socialInteractions.tab_blocked": "geimeine Menschen",
+  "gui.socialInteractions.tab_blocked": "geimene Menschen",
   "gui.socialInteractions.blocking_hint": "Mit Bill Gates Account verwalten",
   "gui.socialInteractions.status_hidden": "Hidden",
   "gui.socialInteractions.status_blocked": "Blocked",
@@ -584,8 +584,8 @@
   "options.accessibility.link": "Accessibility Guide",
   "options.key.toggle": "Toggle",
   "options.key.hold": "Hold",
-  "options.skinCustomisation": "Umkleide",
-  "options.skinCustomisation.title": "Umkleide",
+  "options.skinCustomisation": "Sking Customization",
+  "options.skinCustomisation.title": "Skin Customization",
   "options.modelPart.cape": "Cape",
   "options.modelPart.hat": "Hat",
   "options.modelPart.jacket": "Jacket",
@@ -1564,7 +1564,7 @@
   "item.minecraft.wooden_shovel": "Wooden Shovel",
   "item.minecraft.wooden_pickaxe": "Wooden Pickaxe",
   "item.minecraft.wooden_axe": "Wooden Axe",
-  "item.minecraft.stone_sword": "Webriger Piekser",
+  "item.minecraft.stone_sword": "Stone Sword",
   "item.minecraft.stone_shovel": "Stone Shovel",
   "item.minecraft.stone_pickaxe": "Stone Pickaxe",
   "item.minecraft.stone_axe": "Stone Axe",
@@ -1918,14 +1918,14 @@
   "item.minecraft.lodestone_compass": "Lodestone Compass",
   "item.minecraft.netherite_scrap": "Netherite Scrap",
   "item.minecraft.netherite_ingot": "Netherite Ingot",
-  "item.minecraft.netherite_helmet": "Netherite Helmet",
-  "item.minecraft.netherite_chestplate": "Netherite Chestplate",
-  "item.minecraft.netherite_leggings": "Netherite Leggings",
-  "item.minecraft.netherite_boots": "Netherite Boots",
-  "item.minecraft.netherite_axe": "Netherite Axe",
-  "item.minecraft.netherite_pickaxe": "Netherite Pickaxe",
-  "item.minecraft.netherite_hoe": "Netherite Hoe",
-  "item.minecraft.netherite_shovel": "Netherite Shovel",
+  "item.minecraft.netherite_helmet": "Jacobs Helmet",
+  "item.minecraft.netherite_chestplate": "Jacobs Chestplate",
+  "item.minecraft.netherite_leggings": "Jacobs Leggings",
+  "item.minecraft.netherite_boots": "Jacobs Boots",
+  "item.minecraft.netherite_axe": "Jacobs Axe",
+  "item.minecraft.netherite_pickaxe": "Jacobs Pickaxe",
+  "item.minecraft.netherite_hoe": "Jacobs Müll",
+  "item.minecraft.netherite_shovel": "Jacobs Shovel",
   "item.minecraft.netherite_sword": "Jacobs Zahnstocher",
   "item.minecraft.warped_fungus_on_a_stick": "Warped Fungus on a Stick",
   "container.inventory": "Inventory",
@@ -2190,7 +2190,7 @@
   "death.fell.accident.vines": "%1$s fell off some vines",
   "death.fell.accident.weeping_vines": "%1$s fell off some weeping vines",
   "death.fell.accident.twisting_vines": "%1$s fell off some twisting vines",
-  "death.fell.accident.scaffolding": "%1$s fell off scaffolding",
+  "death.fell.accident.scaffolding": "%1$s ist zu dumm um Grüste zu nutzen",
   "death.fell.accident.other_climbable": "%1$s fell while climbing",
   "death.fell.accident.generic": "%1$s ist zu dumm um zu sneaken",
   "death.fell.killer": "%1$s was doomed to fall",
@@ -2202,9 +2202,9 @@
   "death.attack.lightningBolt.player": "%1$s was struck by lightning whilst fighting %2$s",
   "death.attack.inFire": "%1$s went up in flames",
   "death.attack.inFire.player": "%1$s walked into fire whilst fighting %2$s",
-  "death.attack.onFire": "%1$s burned to death",
+  "death.attack.onFire": "%1$s hatte keine Feuerresistentspotion",
   "death.attack.onFire.player": "%1$s was burnt to a crisp whilst fighting %2$s",
-  "death.attack.lava": "%1$s ist in Lava ersoffen. Japux währe das nicht passiert!",
+  "death.attack.lava": "%1$s tried to swim in lava",
   "death.attack.lava.player": "%1$s tried to swim in lava to escape %2$s",
   "death.attack.hotFloor": "%1$s discovered the floor was lava",
   "death.attack.hotFloor.player": "%1$s walked into danger zone due to %2$s",
@@ -2436,7 +2436,7 @@
   "enchantment.minecraft.punch": "Punch",
   "enchantment.minecraft.infinity": "Infinity",
   "enchantment.minecraft.thorns": "Autsch",
-  "enchantment.minecraft.mending": "Mending",
+  "enchantment.minecraft.mending": "Level Dieb",
   "enchantment.minecraft.binding_curse": "Das bleint hier alles so, wie es hier ist",
   "enchantment.minecraft.vanishing_curse": "Wo sind meine Items hin",
   "enchantment.minecraft.loyalty": "Loyalty",
@@ -2640,7 +2640,7 @@
   "block.minecraft.magenta_banner": "Magenta Banner",
   "block.minecraft.orange_banner": "Orange Banner",
   "block.minecraft.white_banner": "White Banner",
-  "item.minecraft.shield": "Shield",
+  "item.minecraft.shield": "Ich kann kein PvP",
   "item.minecraft.shield.black": "Black Shield",
   "item.minecraft.shield.red": "Red Shield",
   "item.minecraft.shield.green": "Green Shield",
