--- a/assets/minecraft/lang/ls_wbr.json
+++ b/assets/minecraft/lang/ls_wbr.json
@@ -26,7 +26,7 @@
   "gui.up": "Nach oben nun mach schon",
   "gui.down": "Ab nach Unten",
   "gui.yes": "Goldrichtig",
-  "gui.no": "Das kommt mir nicht in die Tüte!",
+  "gui.no": "Halt Stop!",
   "gui.none": "Alles Futsch!",
   "gui.all": "Allllles!!!",
   "gui.ok": "Goldrichtig",
@@ -41,7 +41,7 @@
   "gui.socialInteractions.title": "Assoziale Scheiße",
   "gui.socialInteractions.tab_all": "All",
   "gui.socialInteractions.tab_hidden": "Hidden",
-  "gui.socialInteractions.tab_blocked": "geimene Menschen",
+  "gui.socialInteractions.tab_blocked": "gemeine Menschen",
   "gui.socialInteractions.blocking_hint": "Mit Bill Gates Account verwalten",
   "gui.socialInteractions.status_hidden": "Hidden",
   "gui.socialInteractions.status_blocked": "Blocked",
@@ -70,11 +70,11 @@
   "translation.test.invalid2": "hi %  s",
   "translation.test.args": "%s %s",
   "translation.test.world": "world",
-  "menu.game": "Game Menu",
+  "menu.game": "Walross",
   "menu.singleplayer": "Ich habe keine Freunde :(",
   "menu.multiplayer": "Ich will spielen!",
   "menu.online": "Bill Gates will unser Geld",
-  "menu.options": "WeberGMBH",
+  "menu.options": "Optionen",
   "menu.quit": "Genug für heute",
   "menu.returnToMenu": "Weg hier",
   "menu.disconnect": "Tschüss",
@@ -89,10 +89,10 @@
   "menu.generatingTerrain": "Nun mach schon",
   "menu.convertingLevel": "Converting world",
   "menu.respawning": "Respawning",
-  "menu.shareToLan": "WeberGMBH",
+  "menu.shareToLan": "im W-Lan öffnen",
   "menu.sendFeedback": "Give Feedback",
   "menu.reportBugs": "Alllles falsch!!!",
-  "menu.paused": "Game Paused",
+  "menu.paused": "Walross",
   "menu.modded": " (Kaputt)",
   "optimizeWorld.confirm.title": "Optimize World",
   "optimizeWorld.confirm.description": "This will attempt to optimize your world by making sure all data is stored in the most recent game format. This can take a very long time, depending on your world. Once done, your world may play faster but will no longer be compatible with older versions of the game. Are you sure you wish to proceed?",
@@ -104,10 +104,10 @@
   "optimizeWorld.info.converted": "Upgraded chunks: %s",
   "optimizeWorld.info.skipped": "Skipped chunks: %s",
   "optimizeWorld.info.total": "Total chunks: %s",
-  "selectWorld.title": "Select World",
+  "selectWorld.title": "Ich will spielen!",
   "selectWorld.search": "search for worlds",
   "selectWorld.world": "World",
-  "selectWorld.select": "Play Selected World",
+  "selectWorld.select": "Spielen!",
   "selectWorld.create": "Create New World",
   "selectWorld.recreate": "Re-Create",
   "selectWorld.createDemo": "Play New Demo World",
@@ -318,16 +318,16 @@
   "selectServer.title": "Wähl einen Server aus. Nun mach schon!",
   "selectServer.select": "Ich will spielen",
   "selectServer.direct": "Mmmmh Knusprig",
-  "selectServer.edit": "Ändern",
-  "selectServer.delete": "Weg damit",
+  "selectServer.edit": "Alles falsch",
+  "selectServer.delete": "Mülltonne",
   "selectServer.add": "Da fehlt was",
-  "selectServer.defaultName": "Minecraft Server",
-  "selectServer.deleteQuestion": "Are you sure you want to remove this server?",
-  "selectServer.deleteWarning": "'Bill Gates will nicht, dass du diesen Server löscht",
+  "selectServer.defaultName": "Minecraft Server der WeberGMBH",
+  "selectServer.deleteQuestion": "Bill Gates spielt gerne auf diesem Server!",
+  "selectServer.deleteWarning": "'Bill Gates will nicht, dass du diesen Server löscht! :(",
   "selectServer.deleteButton": "Delete",
   "selectServer.refresh": "Neu laden",
   "selectServer.hiddenAddress": "(Hidden)",
-  "addServer.title": "Edit Server Info",
+  "addServer.title": "Bill Gates hätte gerne ein Taschentuch",
   "addServer.enterName": "Server Name",
   "addServer.enterIp": "Server Address",
   "addServer.add": "Mmmh knusprig",
@@ -336,16 +336,16 @@
   "addServer.resourcePack.enabled": "Enabled",
   "addServer.resourcePack.disabled": "Disabled",
   "addServer.resourcePack.prompt": "Prompt",
-  "lanServer.title": "LAN World",
-  "lanServer.scanning": "Scanning for games on your local network",
+  "lanServer.title": "W-LAN World",
+  "lanServer.scanning": "Herr Weber sucht nach Servern in deinem W-Lan",
   "lanServer.start": "Start LAN World",
   "lanServer.otherPlayers": "Settings for Other Players",
   "multiplayerWarning.header": "Achtung: Bill Gates will das nicht",
-  "multiplayerWarning.message": "Caution: Online play is offered by third-party servers that are not owned, operated, or supervised by Mojang Studios or Microsoft. During online play, you may be exposed to unmoderated chat messages or other types of user-generated content that may not be suitable for everyone.",
+  "multiplayerWarning.message": "Bill Gates mag nur Schokoladen-Eis. Mmmmmmmh knusprig!",
   "multiplayerWarning.check": "Diese Warnung immer anzeigen. MUHAHAHAHAHA!!!!",
-  "multiplayer.title": "Play Multiplayer",
-  "multiplayer.texturePrompt.line1": "This server recommends the use of a custom resource pack.",
-  "multiplayer.texturePrompt.line2": "Would you like to download and install it automagically?",
+  "multiplayer.title": "Ich will spielen!",
+  "multiplayer.texturePrompt.line1": "Bill Gates will, dass du sein Rescource Pack benutzt! :>",
+  "multiplayer.texturePrompt.line2": "Bill Gates mag am liebsten Pommes!",
   "multiplayer.downloadingTerrain": "Wir sehen und dann in 100 Jahren wieder",
   "multiplayer.downloadingStats": "Warum dauert das so lange?",
   "multiplayer.stopSleeping": "Raus aus den Federn",
@@ -356,7 +356,7 @@
   "multiplayer.status.and_more": "... and %s more ...",
   "multiplayer.status.cancelled": "Cancelled",
   "multiplayer.status.cannot_connect": "Bill Gates will nicht, dass du Minecraft spielst",
-  "multiplayer.status.cannot_resolve": "Bill Gates will nicht, dass du Minecraft spielst",
+  "multiplayer.status.cannot_resolve": "Bill Gates will ein Schokoladen Eis essen!",
   "multiplayer.status.finished": "Finished",
   "multiplayer.status.incompatible": "Bill Gates mag diese Version nicht :(",
   "multiplayer.status.no_connection": "(no connection)",
@@ -364,7 +364,7 @@
   "multiplayer.status.old": "Old",
   "multiplayer.status.pinging": "Pinging...",
   "multiplayer.status.quitting": "Quitting",
-  "multiplayer.status.unknown": "???",
+  "multiplayer.status.unknown": "Kaputt",
   "multiplayer.status.unrequested": "Received unrequested status",
   "multiplayer.status.request_handled": "Status request has been handled",
   "multiplayer.disconnect.authservers_down": "Authentication servers are down. Please try again later, sorry!",
@@ -375,7 +375,7 @@
   "multiplayer.disconnect.banned_ip.expiration": "\nYour ban will be removed on %s",
   "multiplayer.disconnect.duplicate_login": "You logged in from another location",
   "multiplayer.disconnect.flying": "Flying is not enabled on this server",
-  "multiplayer.disconnect.generic": "Disconnected",
+  "multiplayer.disconnect.generic": "Kaputt",
   "multiplayer.disconnect.idling": "You have been idle for too long!",
   "multiplayer.disconnect.illegal_characters": "Illegal characters in chat",
   "multiplayer.disconnect.invalid_entity_attacked": "Attempting to attack an invalid entity",
@@ -402,18 +402,18 @@
   "chat.type.emote": "* %s %s",
   "chat.type.announcement": "[%s] %s",
   "chat.type.admin": "[%s: %s]",
-  "chat.type.advancement.task": "%s has made the advancement %s",
-  "chat.type.advancement.challenge": "%s has completed the challenge %s",
+  "chat.type.advancement.task": "%s gönnt sich den Erfolg %s Das sieht lecker aus!",
+  "chat.type.advancement.challenge": "%s hat die Challenge %s genommen",
   "chat.type.advancement.goal": "%s has reached the goal %s",
   "chat.type.team.text": "%s <%s> %s",
   "chat.type.team.sent": "-> %s <%s> %s",
   "chat.type.team.hover": "Message Team",
-  "chat.link.confirm": "Are you sure you want to open the following website?",
-  "chat.link.warning": "Never open links from people that you don't trust!",
-  "chat.copy": "Ab in die Zwischanablage damit",
-  "chat.copy.click": "Ab in die Zwischanablage damit",
-  "chat.link.confirmTrusted": "Do you want to open this link or copy it to your clipboard?",
-  "chat.link.open": "In Internet Explorer öffnen",
+  "chat.link.confirm": "Bill Gates will nicht, dass du diesen Link öffnest!!!",
+  "chat.link.warning": "Der Drucker hat kein Papier",
+  "chat.copy": "Kopieren",
+  "chat.copy.click": "Kopieren",
+  "chat.link.confirmTrusted": "Walross",
+  "chat.link.open": "Internet Explorer",
   "chat.coordinates": "%s, %s, %s",
   "chat.coordinates.tooltip": "Click to teleport",
   "chat.queue": "[+%s pending lines]",
@@ -440,10 +440,10 @@
   "demo.help.buy": "Purchase Now!",
   "demo.help.later": "Continue Playing!",
   "connect.connecting": "Bill Gates wird dich in kürze verbinden",
-  "connect.aborted": "Aborted",
+  "connect.aborted": "Kaputt :/",
   "connect.authorizing": "WeberGMBH",
   "connect.negotiating": "Negotiating...",
-  "connect.encrypting": "Fun Fact: Ich habe keine Idee was ich hier hin schreiben soll",
+  "connect.encrypting": "Der Drucker hat kein Papier :<",
   "connect.joining": "Bill Gates will Schnitzel essen",
   "connect.failed": "Alles falsch",
   "disconnect.genericReason": "%s",
@@ -456,38 +456,38 @@
   "disconnect.loginFailedInfo": "Failed to log in: %s",
   "disconnect.loginFailedInfo.serversUnavailable": "Soory, Bill Gates muss gerade die Mojang Server neustarten :/",
   "disconnect.loginFailedInfo.invalidSession": "Bill Gates will nicht, dass du spielst",
-  "disconnect.loginFailedInfo.insufficientPrivileges": "Multiplayer is disabled. Please check your Microsoft account settings.",
+  "disconnect.loginFailedInfo.insufficientPrivileges": "Der Drucker hat kein Papier",
   "disconnect.quitting": "Trololololol",
   "disconnect.endOfStream": "End of stream",
   "disconnect.overflow": "Buffer overflow",
   "disconnect.spam": "Bill Gates will nicht, dass su spamst",
   "disconnect.exceeded_packet_rate": "Kicked for exceeding packet rate limit",
-  "soundCategory.master": "Master Volume",
-  "soundCategory.music": "Music",
+  "soundCategory.master": "Meister Lautstärke",
+  "soundCategory.music": "Gedudel",
   "soundCategory.record": "Jukebox/Note Blocks",
   "soundCategory.weather": "Weather",
-  "soundCategory.hostile": "Hostile Creatures",
-  "soundCategory.neutral": "Friendly Creatures",
+  "soundCategory.hostile": "böse Walrosse",
+  "soundCategory.neutral": "liebe Lamas",
   "soundCategory.player": "Players",
   "soundCategory.block": "Blocks",
   "soundCategory.ambient": "Ambient/Environment",
   "soundCategory.voice": "Voice/Speech",
   "record.nowPlaying": "Aktuell dudelt: %s",
-  "options.off": "OFF",
-  "options.on": "ON",
-  "options.off.composed": "%s: OFF",
-  "options.on.composed": "%s: ON",
+  "options.off": "Kaputt",
+  "options.on": "Knusprig",
+  "options.off.composed": "%s: Kaputt",
+  "options.on.composed": "%s: Knusprig",
   "options.generic_value": "%s: %s",
   "options.pixel_value": "%s: %spx",
   "options.percent_value": "%s: %s%%",
   "options.percent_add_value": "%s: +%s%%",
-  "options.visible": "Shown",
-  "options.hidden": "Hidden",
-  "options.title": "Options",
+  "options.visible": "im Haus",
+  "options.hidden": "Futsch",
+  "options.title": "Der Drucker braucht Papier!!!",
   "options.controls": "Controls...",
   "options.video": "Video Settings...",
   "options.language": "Language...",
-  "options.sounds": "Music & Sounds...",
+  "options.sounds": "Gedudel",
   "options.sounds.title": "Music & Sound Options",
   "options.languageWarning": "Übersetzungen sind von der WeberGMBH gemacht und zu 100% falsch",
   "options.videoTitle": "Video Settings",
@@ -538,11 +538,11 @@
   "options.difficulty.hardcore": "Hardcore",
   "options.graphics": "Graphics",
   "options.graphics.fabulous.tooltip": "%s graphics uses screen shaders for drawing weather, clouds, and particles behind translucent blocks and water.\nThis may severely impact performance for portable devices and 4K displays.",
-  "options.graphics.fabulous": "Fabulous!",
+  "options.graphics.fabulous": "Beste",
   "options.graphics.fancy.tooltip": "Fancy graphics balances performance and quality for the majority of machines.\nWeather, clouds, and particles may not appear behind translucent blocks or water.",
-  "options.graphics.fancy": "Fancy",
+  "options.graphics.fancy": "Nice",
   "options.graphics.fast.tooltip": "Fast graphics reduces the amount of visible rain and snow.\nTransparency effects are disabled for various blocks such as leaves.",
-  "options.graphics.fast": "Fast",
+  "options.graphics.fast": "Weber",
   "options.graphics.warning.title": "Graphics Device Unsupported",
   "options.graphics.warning.message": "Your graphics device is detected as unsupported for the %s graphics option.\n\nYou may ignore this and continue, however support will not be provided for your device if you choose to use %s graphics.",
   "options.graphics.warning.renderer": "Renderer detected: [%s]",
@@ -550,13 +550,13 @@
   "options.graphics.warning.version": "OpenGL Version detected: [%s]",
   "options.graphics.warning.accept": "Continue without Support",
   "options.graphics.warning.cancel": "Take me Back",
-  "options.clouds.fancy": "Fancy",
-  "options.clouds.fast": "Fast",
+  "options.clouds.fancy": "Lecker",
+  "options.clouds.fast": "Weber",
   "options.guiScale": "GUI Scale",
   "options.guiScale.auto": "Auto",
   "options.renderClouds": "Clouds",
   "options.particles": "Particles",
-  "options.particles.all": "All",
+  "options.particles.all": "Alllles!!",
   "options.particles.decreased": "Decreased",
   "options.particles.minimal": "Minimal",
   "options.multiplayer.title": "Multiplayer Settings...",
@@ -584,8 +584,8 @@
   "options.accessibility.link": "Accessibility Guide",
   "options.key.toggle": "Toggle",
   "options.key.hold": "Hold",
-  "options.skinCustomisation": "Sking Customization",
-  "options.skinCustomisation.title": "Skin Customization",
+  "options.skinCustomisation": "Umkleide",
+  "options.skinCustomisation.title": "Umkleideraum",
   "options.modelPart.cape": "Cape",
   "options.modelPart.hat": "Hat",
   "options.modelPart.jacket": "Jacket",
@@ -1918,19 +1918,19 @@
   "item.minecraft.lodestone_compass": "Lodestone Compass",
   "item.minecraft.netherite_scrap": "Netherite Scrap",
   "item.minecraft.netherite_ingot": "Netherite Ingot",
-  "item.minecraft.netherite_helmet": "Jacobs Helmet",
-  "item.minecraft.netherite_chestplate": "Jacobs Chestplate",
-  "item.minecraft.netherite_leggings": "Jacobs Leggings",
-  "item.minecraft.netherite_boots": "Jacobs Boots",
-  "item.minecraft.netherite_axe": "Jacobs Axe",
-  "item.minecraft.netherite_pickaxe": "Jacobs Pickaxe",
+  "item.minecraft.netherite_helmet": "Jacobs Helm",
+  "item.minecraft.netherite_chestplate": "Jacobs Brustplatte",
+  "item.minecraft.netherite_leggings": "Jacobs Hose",
+  "item.minecraft.netherite_boots": "Jacobs Schuhe",
+  "item.minecraft.netherite_axe": "Jacobs Axt",
+  "item.minecraft.netherite_pickaxe": "Jacobs Spitzhacke",
   "item.minecraft.netherite_hoe": "Jacobs Müll",
-  "item.minecraft.netherite_shovel": "Jacobs Shovel",
+  "item.minecraft.netherite_shovel": "Jacobs Schaufel",
   "item.minecraft.netherite_sword": "Jacobs Zahnstocher",
   "item.minecraft.warped_fungus_on_a_stick": "Warped Fungus on a Stick",
   "container.inventory": "Inventory",
   "container.hopper": "Item Hopper",
-  "container.crafting": "Crafting",
+  "container.crafting": "Müllcraft",
   "container.dispenser": "Dispenser",
   "container.dropper": "Dropper",
   "container.furnace": "Furnace",
